stats bug on mobile, fixed

--- a/sass/layouts/_course.scss
+++ b/sass/layouts/_course.scss
@@ -166,6 +166,14 @@ main {
 
 
 
+.wall__section.study-unit {
+
+
+
+}
+
+
+
 
 
 
